k8s/base/kundenmanagement/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kundenmanagement
spec:
  replicas: 3
  selector:
    matchLabels:
        app.kubernetes.io/name : kundenmanagement
  template:
    metadata:
      labels:
        app.kubernetes.io/name : kundenmanagement
    spec:
      containers:
      - name: kundenmanagement
        image: kundenmanagement      
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
