k8s/base/kundenmanagement/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kundenmanagement
spec:
  selector:
    app.kubernetes.io/name: kundenmanagement
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
