k8s/base/kundenmanagement/http-route-kundenmanagement.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kundenmanagement-route
spec:
  parentRefs:
    - name: booking-app-gateway
#  hostnames:
#    - "foo.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /kundenmanagement
        - path:
            type: PathPrefix
            value: /add-kunde
        - path:
            type: PathPrefix
            value: /edit-kunde
        - path:
            type: PathPrefix
            value: /delete-kunde
        - path:
            type: PathPrefix
            value: /student-verifications
        - path:
            type: PathPrefix
            value: /verify-student
        - path:
            type: PathPrefix
            value: /reject-student
      backendRefs:
        - name: kundenmanagement
          port: 80
